@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: June 14, 2009</p>
+      <p>Last Updated: June 15, 2009</p>
     </td>
   </tr>
 </table>
@@ -1471,6 +1471,9 @@ buildroot-0.1.6 2009-xx-xx &lt;spudmonkey@racsa.co.cr&gt;
 nuttx-0.4.9 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
 	* Add strtoll() and strtoull(); Add macros for atol() and atoll().
+	* dup() and dup2() will now clone socket descriptors
+	* All socket descriptors ar now cloned when when a new task is started
+	  via task_create().
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
